# pdfsystem_mnbvc

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  app.py  pdfsys.example.yaml  pdfsys.full.yaml  pdfsys.smoke.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
demo/: HF_BUCKET_PIPELINE_README.md  README.md  app.py  hf_bucket_pipeline.py  pipeline.py
docs/: PRD.md  ROADMAP.md  SECURITY.md
docs/architecture/: LAYERS.md
docs/golden-principles/: LAZY_IMPORTS.md  UNIFORM_OUTPUT.md  ZERO_DEP_CORE.md
docs/superpowers/plans/: 2026-05-14-e2e-parquet-mac-mps.md  2026-05-14-vlm-mineru-2x-migration.md  2026-05-16-pipeline-viz-html.md  2026-05-16-vlm-region-based.md  2026-05-18-viz-badcase-flagging.md
docs/superpowers/specs/: 2026-05-14-e2e-parquet-mac-mps-design.md  2026-05-14-vlm-mineru-2x-migration-design.md  2026-05-16-pipeline-viz-html-design.md  2026-05-16-vlm-region-based-design.md  2026-05-18-viz-badcase-flagging-design.md
tests/architecture/: test_boundary.py
